--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ server.port=${PORT:8080}
 
 management.endpoints.enabled-by-default=true
 management.endpoints.web.exposure.include=*
+
+demo.name = ${vcap.services.backend-service.credentials.name:Stranger}
