--- a/manifests/manifest.yml
+++ b/manifests/manifest.yml
@@ -1,9 +1,10 @@
 applications:
-  - name: hello-world
-    path: build/libs/hello-world-0.0.1-SNAPSHOT.jar
+  - name: hello-cfee
+    path: ../build/libs/hello-world-0.0.1-SNAPSHOT.jar
     buildpack: java_buildpack
     routes:
       - route: omar-hello-world.us-south.cf.appdomain.cloud
+      #- route: hello-cfee.cpat-dev-cfee-cluster-afb9c6047b062b44e3f1b3ecfeba4309-0000.us-south.containers.appdomain.cloud
     stack: cflinuxfs3
     services:
       - backend-service
