--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ management.endpoints.enabled-by-default=true
 management.endpoints.web.exposure.include=*
 
 demo.name = ${vcap.services.backend-service.credentials.name:Stranger}
+
+test.demo = ${vcap.services.backend-service.credentials.name:Stranger}
