--- a/manifests/manifest-pws.yml
+++ b/manifests/manifest-pws.yml
@@ -1,16 +1,17 @@
 applications:
-- name: hello-world
-  path: build/libs/hello-world-0.0.1-SNAPSHOT.jar
+- name: hello-world-10
+  path: ../build/libs/hello-world-0.0.1-SNAPSHOT.jar
   buildpacks:
   - https://github.com/cloudfoundry/java-buildpack.git
   disk_quota: 1G
-  instances: 1
+  instances: 2
   memory: 1G
   routes:
-  - route: omar-hello-world.cfapps.io
+  - route: hello-world-10.cfapps.io
   stack: cflinuxfs3
   services:
     - backend-service
   env:
     JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.0.2_+ }}'
     SPRING_PROFILES_ACTIVE: dev
+    test-key: my-new-value
